crates/knok/tests/ui/mixed_dtype.stderr
error: graph inputs and output must use one homogeneous tensor element type
 --> tests/ui/mixed_dtype.rs:3:1
  |
3 | #[knok::graph(backend = "llvm-cpu")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/mixed_dtype.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
